--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
       rel="stylesheet"
     />
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="green">
+    <div id="app">
+      <header>
+        <img src="./assets/logo.svg" alt="Logo NLW" />
+      </header>
+      <main id="cards"></main>
+    </div>
     <script src="./main.js"></script>
   </body>
 </html>
