Adicionando outros jogos do dia e nome do grupo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="app">
       <header>
         <img src="./assets/logo.svg" alt="Logo NLW" />
+        <p>Fase de Grupos - Grupo G</p>
       </header>
       <main id="cards"></main>
     </div>
